--- a/styles.css
+++ b/styles.css
@@ -349,7 +349,7 @@ h3 {
 .cta {
   margin: 100px auto;
   width: 80%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7)), url(images/Screenshot\ 2025-11-06\ 222211.png);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7)), url(Screenshot\ 2025-11-06\ 222211.png);
   background-position: center;
   background-size: cover;
   text-align: center;
@@ -597,3 +597,4 @@ h3 {
   }
 
 }
+
